fix: fix scrollbar layout shift bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -155,9 +155,9 @@
     */
 }
 
-html {
+/* html {
   @apply scrollbar-stable;
-}
+} */
 
 @keyframes unclip {
   0% {
